tests/ui/parser/method-call-on-struct-literal-in-if-condition.stderr
error: struct literals are not allowed here
  --> $DIR/method-call-on-struct-literal-in-if-condition.rs:10:8
   |
LL |     if Example { a: one(), }.is_pos() {
   |        ^^^^^^^^^^^^^^^^^^^^^
   |
help: surround the struct literal with parentheses
   |
LL |     if (Example { a: one(), }).is_pos() {
   |        +                     +

error: aborting due to 1 previous error

